# orp

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE.md  README.md  conf.py  genindex.html  goodcomment.txt  index.html  markdown_pages.html  objects.inv  orp2migration.txt  package.xml  resources.html  search.html  searchindex.js  setup.html
.doctrees/: environment.pickle  index.doctree  markdown_pages.doctree  resources.doctree  setup.doctree  troubleshooting.doctree
_sources/: index.rst.txt  markdown_pages.md.txt  setup.md.txt
camera_calib/: depth_PS1080_PrimeSense.yaml  rgb_PS1080_PrimeSense.yaml
cfg/: CornerClassifier.cfg  CylinderClassifier.cfg  HistogramSaver.cfg  Recognizer.cfg  Segmentation.cfg  apc_test_hardware.yaml  apc_test_software.yaml  apc_train.rviz  apc_train.yaml  cph.list  cph_1.yaml  default.yaml  flat.yaml  glovebox.list  milestone3.list  moveit.rviz  pioneer.yaml  ptt_fiducials.xml  recognition.rviz  segmentation.yaml  shelves_absolute.yaml  sia5_demo.yaml  sixdof.list  sixdof.yaml  sixdof_test.yaml  test1.list  test2.list  test3.list  test4.list  test_1.list  train.yaml  training_table_fiducials.xml  view.rviz
data/: apc.yaml  ball.yaml  colored_cubes.yaml  colored_objs.yaml  example_database.yaml
data/calibration/: calibration_command.sh  calibration_params.txt
data/cph/: ball_0.cph  ball_0.pcd  ball_0.vfh  box_0.cph  box_0.pcd  box_0.vfh  box_1.cph  box_1.pcd  box_1.vfh  box_10.cph  box_10.pcd  box_10.vfh  box_100.cph  box_100.pcd  box_100.vfh  box_101.cph  box_101.pcd  box_101.vfh  box_102.cph  box_102.pcd  box_102.vfh  box_103.cph  box_103.pcd  box_103.vfh  box_104.cph  box_104.pcd  box_104.vfh  box_105.cph  box_105.pcd  box_105.vfh  box_106.cph  box_106.pcd  box_106.vfh  box_107.cph  box_107.pcd  box_107.vfh  box_108.cph  box_108.pcd  box_108.vfh  box_109.cph  (+3263 more)
data/fall_2015/: apc.sqlite  ball.sqlite  glovebox.sqlite  glovebox_items.sqlite  ycb.sqlite
data/fourdof/: champion_copper_plus_spark_plug_0.cvfh  champion_copper_plus_spark_plug_12.cvfh  champion_copper_plus_spark_plug_123.cvfh  champion_copper_plus_spark_plug_126.cvfh  champion_copper_plus_spark_plug_129.cvfh  champion_copper_plus_spark_plug_132.cvfh  champion_copper_plus_spark_plug_135.cvfh  champion_copper_plus_spark_plug_138.cvfh  champion_copper_plus_spark_plug_141.cvfh  champion_copper_plus_spark_plug_144.cvfh  champion_copper_plus_spark_plug_147.cvfh  champion_copper_plus_spark_plug_15.cvfh  champion_copper_plus_spark_plug_150.cvfh  champion_copper_plus_spark_plug_153.cvfh  champion_copper_plus_spark_plug_156.cvfh  champion_copper_plus_spark_plug_159.cvfh  champion_copper_plus_spark_plug_162.cvfh  champion_copper_plus_spark_plug_165.cvfh  champion_copper_plus_spark_plug_168.cvfh  champion_copper_plus_spark_plug_171.cvfh  champion_copper_plus_spark_plug_174.cvfh  champion_copper_plus_spark_plug_177.cvfh  champion_copper_plus_spark_plug_18.cvfh  champion_copper_plus_spark_plug_180.cvfh  champion_copper_plus_spark_plug_183.cvfh  champion_copper_plus_spark_plug_186.cvfh  champion_copper_plus_spark_plug_189.cvfh  champion_copper_plus_spark_plug_192.cvfh  champion_copper_plus_spark_plug_195.cvfh  champion_copper_plus_spark_plug_198.cvfh  champion_copper_plus_spark_plug_201.cvfh  champion_copper_plus_spark_plug_204.cvfh  champion_copper_plus_spark_plug_207.cvfh  champion_copper_plus_spark_plug_21.cvfh  champion_copper_plus_spark_plug_210.cvfh  champion_copper_plus_spark_plug_213.cvfh  champion_copper_plus_spark_plug_216.cvfh  champion_copper_plus_spark_plug_219.cvfh  champion_copper_plus_spark_plug_222.cvfh  champion_copper_plus_spark_plug_225.cvfh  (+2721 more)
data/processed/: champion_copper_plus_spark_plug.ply  dotrain.bash  dr_browns_bottle_brush.ply  elmers_washable_no_run_school_glue.ply  highland_6539_self_stick_notes.ply  mead_index_cards.ply  sharpie_accent_tank_style_highlighters.ply
data/raw/: champion_copper_plus_spark_plug.ply  (+23 more)
doc/: Makefile  conf.py  extending.rst  index.rst  troubleshooting.rst
docs/: index.md
doctrees/: environment.pickle  index.doctree  markdown_pages.doctree
html/: genindex.html  index.html  markdown_pages.html  search.html  searchindex.js  setup.html  troubleshooting.html
include/: linemod_train.h
launch/: .pan_table.launch.kate-swp  .pan_table_fiducials.launch.kate-swp  apc_test_hardware.launch  apc_test_software.launch  apc_train.launch  cph.launch  cylinder.launch  det_manip_settings.launch  example.launch  glovebox.launch  glovebox_example.launch  glovebox_geometry.launch  glovebox_geometry_camera.launch  icp_test.launch  indiviual_fiducials.launch  moe.launch  opencv.launch  orient_test.launch  orp.launch  orp_pioneer.launch  pan_table.launch  ptt_fiducials.launch  realsense_test.launch  rgb.launch  simulator.launch  sixdof.launch  sixdof_test.launch  test.launch  train.launch  yaml_test.launch
msg/: ClassificationResult.msg  DetectionSet.msg  Region.msg  WorldObject.msg  WorldObjects.msg
rviz/: apc.rviz  orp.rviz
scripts/: calibrate_camera.sh  calibrate_color.sh  calibrate_depth.sh  camera_tf_publisher.py  load_item_params.py  throttle_nodelet.sh  train_object.py
sphinx-docs/: .buildinfo  Makefile  README.md
src/: .vfh_classifier.cpp.kate-swp  apc_data_collector.cpp  basic_classifier.cpp  classifier.cpp  classifier.cpp.old  classifier2d.cpp  classifier3d.cpp  corner_classifier.cpp  correspondence_grouping.cpp  cph_classifier.cpp  crh_test.cpp  cvfh_classifier.cpp  cylinder_classifier.cpp  dummy_frame_broadcaster.cpp  grasp_generator.cpp  histogram_saver.cpp  hue_classifier.cpp  icp_classifier.cpp  icp_test.cpp  linemod_train.cpp  nn_classifier.cpp  opencv_classifier.cpp  orp_utils.cpp  pan_data_collector.cpp  point_cloud_processor.cpp  recognizer.cpp  region_monitor.cpp  rgb_classifier.cpp  segmentation.cpp  shelf_manager.cpp  sixdof_classifier.cpp  vfh_classifier.cpp  virtual_train.cpp  vision_simulator.cpp  world_object.cpp  world_object_manager.cpp
srv/: ChooseShelf.srv  DataCollect.srv  GetObjectPose.srv  GetObjects.srv  Monitor.srv  Recognition.srv  RunData.srv  SaveCloud.srv  Segmentation.srv
test/: pub_tabletop.sh
(+4359 files in other folders)
