<?xml version="1.0"?>
<package>
  <name>orp</name>
  <version>1.1.0</version>
  <description>Object Recognition and Perception</description>

  <maintainer email="allevato@utexas.edu">Adam Allevato</maintainer>
  <license>BSD</license>
  <author email="allevato@utexas.edu">Adam Allevato</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl</build_depend>
  <run_depend>pcl</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>tf_conversions</build_depend>
  <run_depend>tf_conversions</run_depend>

  <build_depend>eigen_conversions</build_depend>
  <run_depend>eigen_conversions</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  
  <build_depend>obj_interface</build_depend>
  <run_depend>obj_interface</run_depend>

  <build_depend>interactive_markers</build_depend>
  <run_depend>interactive_markers</run_depend>
  <export>
  </export>
</package>
