<?xml version="1.0"?>
<package format="2">
  <name>orp</name>
  <version>2.0.0</version>
  <description>Object Recognition and Perception</description>

  <maintainer email="allevato@utexas.edu">Adam Allevato</maintainer>
  <license>BSD</license>
  <author email="allevato@utexas.edu">Adam Allevato</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  
  <depend>interactive_markers</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
  </export>
</package>
