<?xml version="1.0"?>
<package format="2">
  <name>orp</name>
  <version>2.0.0</version>
  <description>Object Recognition and Perception</description>

  <maintainer email="allevato@utexas.edu">Adam Allevato</maintainer>
  <author email="allevato@utexas.edu">Adam Allevato</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>interactive_markers</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>opencv_apps</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
